samples/_failures_safe/1761139286_815618_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cf848885.c: In function ‘lex_string’:
./samples/SAFE/__tmp_cf848885.c:152:17: error: expected ‘;’ at end of input
  152 |     return token
      |                 ^
      |                 ;
./samples/SAFE/__tmp_cf848885.c:152:5: error: expected declaration or statement at end of input
  152 |     return token
      |     ^~~~~~
